# personal-assistant-rag

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
app/: config.py  models.py  rag_assistant.py
